# interpreter

./: .gitignore  CMakeLists.txt  README.md  checkstyle.sh  index.js  latest_lexer_release.sh  latest_parser_release.sh  package-lock.json
.github/workflows/: main.yml
include/: CMakeLists.txt  main.hpp
include/interpreter/: interpreter.hpp  logs.hpp  storage.hpp  utils.hpp
include/interpreter/data/: array.hpp  object.hpp
include/interpreter/expressions/: assignment_expression.hpp  binary_expression.hpp  call_expression.hpp  callback_function_expression.hpp  expression.hpp  literal_expression.hpp  member_expression.hpp  short_operation_expression.hpp  ternary_expression.hpp  unary_expression.hpp
include/interpreter/node/: interpreter_node.hpp  node_parser.hpp
include/interpreter/statements/: conditional_statement.hpp  declaration_statement.hpp  log_statement.hpp  loop_statement.hpp  return_statement.hpp  statement.hpp
src/: CMakeLists.txt  main.cpp
src/interpreter/: interpreter.cpp  storage.cpp  utils.cpp
src/interpreter/data/: array.cpp  object.cpp
src/interpreter/expressions/: assignment_expression.cpp  binary_expression.cpp  call_expression.cpp  callback_function_expression.cpp  expression.cpp  literal_expression.cpp  member_expression.cpp  short_operation_expression.cpp  ternary_expression.cpp  unary_expression.cpp
src/interpreter/node/: interpreter_node.cpp  node_parser.cpp
src/interpreter/statements/: conditional_statement.cpp  declaration_statement.cpp  log_statement.cpp  loop_statement.cpp  return_statement.cpp  statement.cpp
test/: CMakeLists.txt
